Removed class tag from huc-name-text line; abbreviated Reservoir and Res. to prevent second line spillover.

--- a/css/style-map.css
+++ b/css/style-map.css
@@ -9,8 +9,8 @@ svg {
 	font-weight: bold;
 }
 
-.huc-name {
-	margin-top: 20px;
+#huc-name-text {
+	margin-top: 25px;
 }
 
 #chart-title {
